Refactor: servicios y controladores actualizados a DTO + pruebas unitarias ajustadas