@@ -2,24 +2,19 @@ package com.wikigroup.desarrolloweb.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.wikigroup.desarrolloweb.dtos.UsuarioDto;
-import com.wikigroup.desarrolloweb.model.Empresa;
-import com.wikigroup.desarrolloweb.model.Usuario;
-import com.wikigroup.desarrolloweb.service.EmpresaService;
 import com.wikigroup.desarrolloweb.service.UsuarioService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
@@ -33,32 +28,13 @@ class UsuarioControllerTest {
     @MockBean
     private UsuarioService usuarioService;
 
-    @MockBean
-    private EmpresaService empresaService;
-
-    @MockBean
-    private ModelMapper modelMapper;
-
     @Autowired
     private ObjectMapper objectMapper;
 
-    private Usuario usuario;
     private UsuarioDto usuarioDto;
-    private Empresa empresa;
 
     @BeforeEach
     void setUp() {
-        empresa = new Empresa();
-        empresa.setId(1L);
-        empresa.setNombre("Test Company");
-
-        usuario = new Usuario();
-        usuario.setId(1L);
-        usuario.setNombre("Test User");
-        usuario.setEmail("test@example.com");
-        usuario.setPassword("password123");
-        usuario.setEmpresa(empresa);
-
         usuarioDto = new UsuarioDto();
         usuarioDto.setId(1L);
         usuarioDto.setNombre("Test User");
@@ -69,11 +45,7 @@ class UsuarioControllerTest {
     @Test
     void getAll_ShouldReturnListOfUsuarios() throws Exception {
         // Given
-        List<Usuario> usuarios = Arrays.asList(usuario);
-        List<UsuarioDto> usuarioDtos = Arrays.asList(usuarioDto);
-        
-        when(usuarioService.findAll()).thenReturn(usuarios);
-        when(modelMapper.map(any(Usuario.class), eq(UsuarioDto.class))).thenReturn(usuarioDto);
+        when(usuarioService.getAll()).thenReturn(List.of(usuarioDto));
 
         // When & Then
         mockMvc.perform(get("/api/usuarios"))
@@ -84,14 +56,14 @@ class UsuarioControllerTest {
                 .andExpect(jsonPath("$[0].nombre").value("Test User"))
                 .andExpect(jsonPath("$[0].email").value("test@example.com"));
 
-        verify(usuarioService, times(1)).findAll();
+        verify(usuarioService, times(1)).getAll();
+        verifyNoMoreInteractions(usuarioService);
     }
 
     @Test
     void getById_WhenUsuarioExists_ShouldReturnUsuario() throws Exception {
         // Given
-        when(usuarioService.findById(1L)).thenReturn(usuario);
-        when(modelMapper.map(usuario, UsuarioDto.class)).thenReturn(usuarioDto);
+        when(usuarioService.getById(1L)).thenReturn(usuarioDto);
 
         // When & Then
         mockMvc.perform(get("/api/usuarios/1"))
@@ -101,50 +73,46 @@ class UsuarioControllerTest {
                 .andExpect(jsonPath("$.nombre").value("Test User"))
                 .andExpect(jsonPath("$.email").value("test@example.com"));
 
-        verify(usuarioService, times(1)).findById(1L);
+        verify(usuarioService, times(1)).getById(1L);
+        verifyNoMoreInteractions(usuarioService);
     }
 
     @Test
     void create_ShouldCreateAndReturnUsuario() throws Exception {
         // Given
-        when(empresaService.findById(1L)).thenReturn(empresa);
-        when(modelMapper.map(any(UsuarioDto.class), eq(Usuario.class))).thenReturn(usuario);
-        when(usuarioService.save(any(Usuario.class))).thenReturn(usuario);
-        when(modelMapper.map(any(Usuario.class), eq(UsuarioDto.class))).thenReturn(usuarioDto);
+        when(usuarioService.create(any(UsuarioDto.class))).thenReturn(usuarioDto);
 
         // When & Then
         mockMvc.perform(post("/api/usuarios")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(usuarioDto)))
-                .andExpect(status().isOk())
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(usuarioDto)))
+                .andExpect(status().isCreated())
+                .andExpect(header().string("Location", "/api/usuarios/1"))
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.id").value(1L))
                 .andExpect(jsonPath("$.nombre").value("Test User"))
                 .andExpect(jsonPath("$.email").value("test@example.com"));
 
-        verify(empresaService, times(1)).findById(1L);
-        verify(usuarioService, times(1)).save(any(Usuario.class));
+        verify(usuarioService, times(1)).create(any(UsuarioDto.class));
+        verifyNoMoreInteractions(usuarioService);
     }
 
     @Test
     void update_ShouldUpdateAndReturnUsuario() throws Exception {
         // Given
-        when(empresaService.findById(1L)).thenReturn(empresa);
-        when(modelMapper.map(any(UsuarioDto.class), eq(Usuario.class))).thenReturn(usuario);
-        when(usuarioService.save(any(Usuario.class))).thenReturn(usuario);
-        when(modelMapper.map(any(Usuario.class), eq(UsuarioDto.class))).thenReturn(usuarioDto);
+        when(usuarioService.update(eq(1L), any(UsuarioDto.class))).thenReturn(usuarioDto);
 
         // When & Then
         mockMvc.perform(put("/api/usuarios/1")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(usuarioDto)))
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(usuarioDto)))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.id").value(1L))
                 .andExpect(jsonPath("$.nombre").value("Test User"));
 
-        verify(empresaService, times(1)).findById(1L);
-        verify(usuarioService, times(1)).save(any(Usuario.class));
+        verify(usuarioService, times(1)).update(eq(1L), any(UsuarioDto.class));
+        verifyNoMoreInteractions(usuarioService);
     }
 
     @Test
@@ -154,8 +122,9 @@ class UsuarioControllerTest {
 
         // When & Then
         mockMvc.perform(delete("/api/usuarios/1"))
-                .andExpect(status().isOk());
+                .andExpect(status().isNoContent());
 
         verify(usuarioService, times(1)).delete(1L);
+        verifyNoMoreInteractions(usuarioService);
     }
 }
